[project]
name = "hive-bench"
version = "0.2.0"
description = "Benchmarking tool for Hive nodes using hive-nectar"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "hive-nectar",
    "python-dotenv",
]

[project.scripts]
hive-bench = "hive_bench.cli.bench_runner:main"
hive-bench-post = "hive_bench.cli.generate_post:main"

[dependency-groups]
dev = [
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
sources = ["src/hive_bench"]

[tool.mypy]
python_version = ">3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = [
  ".tox",
  ".git",
  "__pycache__",
  "docs/source/conf.py",
  "build",
  "dist",
  "tests/fixtures/*",
  "*.pyc",
  "*.egg-info",
  ".cache",
  ".eggs",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.uv]
default-groups = []

[tool.uv.sources]
hive-nectar = { git = "https://github.com/thecrazygm/hive-nectar" }
